modified:   EXP_REPORT.md modified:   vietnamese_embed_databse.ipynb

--- a/vietnamese_embed_databse.ipynb
+++ b/vietnamese_embed_databse.ipynb
@@ -383,6 +383,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c6a0782",
+   "metadata": {},
+   "source": [
+    "#### local gguf "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "eff996f7",
@@ -2887,6 +2895,207 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a9ba3f8",
+   "metadata": {},
+   "source": [
+    "#### api call (FAILURE)\n",
+    "\n",
+    "- **REFERENCE**\n",
+    "\n",
+    "  - [1] [mistral ai embeddings](https://docs.mistral.ai/capabilities/embeddings/text_embeddings/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "af2111dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from mistralai import Mistral\n",
+    "\n",
+    "# to use this success fully, \n",
+    "# api_key = os.environ[\"MISTRAL_API_KEY\"] \n",
+    "# MUST: in the Linux terminal,\n",
+    "#   export MISTRAL_API_KEY=\"T0sAC36z31CWIsTmUjU8dFN03XXf7OiI\"\n",
+    "\n",
+    "api_key = \"T0sAC36z31CWIsTmUjU8dFN03XXf7OiI\" # my free api key\n",
+    "model = \"open-mistral-nemo\" # according to MISTRAL AI description, this is the best open multilanguage model\n",
+    "\n",
+    "client = Mistral(api_key=api_key)\n",
+    "# chat_response = client.chat.complete(\n",
+    "#     model= model,\n",
+    "#     messages = [\n",
+    "#         {\n",
+    "#             \"role\": \"user\",\n",
+    "#             \"content\": \"Bạn biết tiếng Việt không?\",\n",
+    "#         },\n",
+    "#     ]\n",
+    "# )\n",
+    "# print(chat_response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "4458fe86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========\n",
+      "doc_title='QH15_m_523642_31_2024.docx'\n",
+      "==========\n",
+      "==========\n",
+      "doc_title='QH15_m_556390_48_2024.docx'\n",
+      "==========\n",
+      "==========\n",
+      "doc_title='NQ-CP_m_579993_148.docx'\n",
+      "==========\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = {}\n",
+    "# Extract and print all text\n",
+    "idx = 0\n",
+    "# cn = 0\n",
+    "# inner = False\n",
+    "word_cn = 200\n",
+    "overlap_word = 10\n",
+    "embed_lists = []\n",
+    "for key, value in docs.items():\n",
+    "      # if inner == True:\n",
+    "      #       break\n",
+    "\n",
+    "      # within the a document\n",
+    "      \n",
+    "      doc_title = value['title']\n",
+    "      print(f\"{'='*10}\")\n",
+    "      print(f\"{doc_title=}\")\n",
+    "      print(f\"{'='*10}\")\n",
+    "      doc_content = \"\"\n",
+    "\n",
+    "      num_paragraphs = len(value['content'].paragraphs)\n",
+    "      # print(f\"{num_paragraphs=}\") \n",
+    "\n",
+    "      idx_paragraph = 0\n",
+    "      for para in value['content'].paragraphs:\n",
+    "            \n",
+    "            extract_text = para.text\n",
+    "            doc_content = doc_content + \" <\\s> \" + extract_text\n",
+    "            doc_content_split = doc_content.split(' ')\n",
+    "            len_doc = len(doc_content_split)\n",
+    "\n",
+    "            idx_paragraph = idx_paragraph + 1\n",
+    "            \n",
+    "            if (len_doc > word_cn) and (idx_paragraph != num_paragraphs):\n",
+    "                #   # embed\n",
+    "                #   # print(f\"{doc_content=}\")\n",
+    "                #   embeddings = llm.create_embedding(doc_content)\n",
+    "\n",
+    "                #   # save\n",
+    "                #   res[int(idx)] = {\n",
+    "                #         'title': doc_title,\n",
+    "                #         'content': doc_content,\n",
+    "                #         'embed': embeddings['data'][0]['embedding']\n",
+    "                #         }\n",
+    "                #   # inrease the database index\n",
+    "                #   idx = idx + 1\n",
+    "                  \n",
+    "                  embed_lists.append(doc_content)\n",
+    "\n",
+    "                  # reset\n",
+    "                  doc_content = ' '.join(doc_content_split[len_doc-overlap_word: -1])\n",
+    "                  \n",
+    "            if idx_paragraph == num_paragraphs: # last paragraph\n",
+    "                  \n",
+    "                #   # embed\n",
+    "                #   # print(f\" last doc: {doc_content=}\")\n",
+    "                #   embeddings = llm.create_embedding(doc_content)\n",
+    "                  \n",
+    "                #   # save\n",
+    "                #   res[int(idx)] = {\n",
+    "                #         'title': doc_title,\n",
+    "                #         'content': doc_content,\n",
+    "                #         'embed': embeddings['data'][0]['embedding']\n",
+    "                #         }\n",
+    "                #   # inrease the database index\n",
+    "                #   idx = idx + 1\n",
+    "\n",
+    "                embed_lists.append(doc_content)\n",
+    "\n",
+    "                  \n",
+    "            # # if cn == 10:\n",
+    "            # #       inner = True\n",
+    "            # #       break\n",
+    "\n",
+    "            # # idx = idx + 1\n",
+    "\n",
+    "            # # cn = cn +1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "050345f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(embed_lists[0:10]))\n",
+    "tst_list = [\"Bạn là ai?\", \"Tôi là ai?\"]\n",
+    "print(len(tst_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c469bb22",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SDKError",
+     "evalue": "API error occurred: Status 400\n{\"object\":\"error\",\"message\":\"Invalid model: open-mistral-nemo\",\"type\":\"invalid_model\",\"param\":null,\"code\":\"1500\"}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mSDKError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[68]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m embeddings_batch_response = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43membeddings\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtst_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/personal_project_llm/lib/python3.11/site-packages/mistralai/embeddings.py:109\u001b[39m, in \u001b[36mEmbeddings.create\u001b[39m\u001b[34m(self, model, inputs, output_dimension, output_dtype, retries, server_url, timeout_ms, http_headers)\u001b[39m\n\u001b[32m    107\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m utils.match_response(http_res, \u001b[33m\"\u001b[39m\u001b[33m4XX\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m*\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    108\u001b[39m     http_res_text = utils.stream_to_text(http_res)\n\u001b[32m--> \u001b[39m\u001b[32m109\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m models.SDKError(\n\u001b[32m    110\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mAPI error occurred\u001b[39m\u001b[33m\"\u001b[39m, http_res.status_code, http_res_text, http_res\n\u001b[32m    111\u001b[39m     )\n\u001b[32m    112\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m utils.match_response(http_res, \u001b[33m\"\u001b[39m\u001b[33m5XX\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m*\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    113\u001b[39m     http_res_text = utils.stream_to_text(http_res)\n",
+      "\u001b[31mSDKError\u001b[39m: API error occurred: Status 400\n{\"object\":\"error\",\"message\":\"Invalid model: open-mistral-nemo\",\"type\":\"invalid_model\",\"param\":null,\"code\":\"1500\"}"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings_batch_response = client.embeddings.create(\n",
+    "    model=model,\n",
+    "    inputs=tst_list,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49ff678f",
+   "metadata": {},
+   "source": [
+    "#### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "514067e0",
    "metadata": {},
    "source": [
@@ -3812,6 +4021,52 @@
     "test_emds = []\n",
     "for idx, row_data in data.items():\n",
     "    test_emds.append(row_data['embed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5735f9e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(3, 2)\n",
+      "True\n",
+      "3\n",
+      "[[1 0 2]]\n",
+      "[[ 0.  2. 18.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use to check the result returned by `vec_distance_cosine` - SQLite-vec \n",
+    "# (https://alexgarcia.xyz/sqlite-vec/api-reference.html#vec_distance_cosine)\n",
+    "# Conclusion: `vec_distance_cosine` = the smaller the distance, the more similar they are\n",
+    "import numpy as np\n",
+    "d = 2                           # dimension\n",
+    "nb = 3                      # database size\n",
+    "nq = 1                       # nb of queries\n",
+    "\n",
+    "xb = np.array([[2, 2], [1, 1], [-2,-2]])\n",
+    "xq = np.array([[1, 1]])\n",
+    "print(xq.shape)\n",
+    "print(xb.shape)\n",
+    "\n",
+    "\n",
+    "import faiss                   # make faiss available\n",
+    "index = faiss.IndexFlatL2(d)   # build the index\n",
+    "print(index.is_trained)\n",
+    "index.add(xb)                  # add vectors to the index\n",
+    "print(index.ntotal)\n",
+    "\n",
+    "k = 3                          # we want to see 4 nearest neighbors\n",
+    "D, I = index.search(xq, k) # sanity check\n",
+    "print(I)\n",
+    "print(D)\n"
    ]
   },
   {
