modified:   EXP_REPORT.md modified:   Local_GenAi_code.ipynb modified:   vietnamese_embed_databse.ipynb: 	- fix the bugs about the `rowid` in `meta_table_gguf` in SQLite database

--- a/Local_GenAi_code.ipynb
+++ b/Local_GenAi_code.ipynb
@@ -2103,14 +2103,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Vâng, tôi biết nói tiếng Việt. Tôi có thể giúp gì cho bạn bằng tiếng Việt?\n"
+            "Vâng, tôi có thể nói tiếng Việt. Bạn cần tôi giúp gì không?\n"
           ]
         }
       ],
@@ -2143,7 +2143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -2206,6 +2206,13 @@
         ")\n",
         "\n",
         "print(chat_response.choices[0].message.content)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## compared with the gguf offline model"
       ]
     },
     {
